# mcp-context-forge

./: .gitignore
mcp-servers/python/granite_vision_server/: Containerfile  Makefile  README.md  pyproject.toml  requirements.txt
mcp-servers/python/granite_vision_server/documents/: INVOICE-2.docx  INVOICE-3.docx  INVOICE-4.docx
mcp-servers/python/granite_vision_server/examples/: image_analysis.py
mcp-servers/python/granite_vision_server/src/granite-vision-server/: __init__.py  server.py  server_fastmcp.py
mcp-servers/python/granite_vision_server/src/granite-vision-server/models/: __init__.py  granite_vision_models.py  model_capabilities.py
mcp-servers/python/granite_vision_server/src/granite-vision-server/processing/: __init__.py  image_processor.py  ocr_processor.py
mcp-servers/python/granite_vision_server/src/granite-vision-server/providers/: __init__.py  custom_endpoints.py  huggingface_vision.py  ollama_vision.py
mcp-servers/python/granite_vision_server/src/granite-vision-server/tools/: batch_processing.py  document_extraction.py  image_analysis.py  vqa.py
mcp-servers/python/granite_vision_server/src/granite-vision-server/utils/: format_converters.py  image_utils.py  validations.py
mcp-servers/python/granite_vision_server/src/granite_vision_server/: __init__.py  config.yaml  server.py  server_fastmcp.py
mcp-servers/python/granite_vision_server/src/granite_vision_server/models/: __init__.py  granite_vision_models.py  model_capabilities.py
mcp-servers/python/granite_vision_server/tests/: test_batch_processing.py  test_chart_analysis.py  test_document_extraction.py  test_huggingface_vision.py  test_image_analysis.py  test_ocr.py  test_ollama_vision.py  test_server.py  test_table_processing.py  test_vqa.py
(+27 files in other folders)
